--- a/config/corne.conf
+++ b/config/corne.conf
@@ -1,3 +1,23 @@
+# Enable Wireless (Bluetooth LE)
+CONFIG_ZMK_BLE=y
+
+# Enable Split Keyboard Support
+CONFIG_ZMK_SPLIT=y
+CONFIG_ZMK_SPLIT_BLE=y
+
+# Bluetooth settings
+CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
+
+# Battery monitoring for both halves
+CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_POLLING=y
+CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_POLLING_INTERVAL_MS=60000
+
+# Enable sleep mode for better battery life
+CONFIG_ZMK_SLEEP=y
+
+# USB settings (for central half connection to computer)
+CONFIG_ZMK_USB=y
+
 # Uncomment the following lines to enable the Corne RGB Underglow
 # CONFIG_ZMK_RGB_UNDERGLOW=n
 # CONFIG_WS2812_STRIP=n
