oled screen configuration

--- a/config/corne.conf
+++ b/config/corne.conf
@@ -18,9 +18,18 @@ CONFIG_ZMK_SLEEP=y
 # USB settings (for central half connection to computer)
 CONFIG_ZMK_USB=y
 
+# OLED Display Configuration
+CONFIG_ZMK_DISPLAY=y
+CONFIG_I2C=y
+
+# OLED Animation Settings
+CONFIG_ZMK_DISPLAY_WORK_QUEUE_DEDICATED=y
+CONFIG_ZMK_DISPLAY_STATUS_SCREEN_BUILT_IN=y
+
+# Layer status display
+CONFIG_ZMK_DISPLAY_LAYER_STATUS=y
+
 # Uncomment the following lines to enable the Corne RGB Underglow
 # CONFIG_ZMK_RGB_UNDERGLOW=n
 # CONFIG_WS2812_STRIP=n
 
-# Uncomment the following line to enable the Corne OLED Display
-# CONFIG_ZMK_DISPLAY=y
