--- a/config/corne.conf
+++ b/config/corne.conf
@@ -29,6 +29,10 @@ CONFIG_ZMK_DISPLAY_STATUS_SCREEN_BUILT_IN=y
 # Layer status display
 CONFIG_ZMK_DISPLAY_LAYER_STATUS=y
 
+# Home Row Mods Configuration
+CONFIG_ZMK_BEHAVIOR_MOD_TAP_PREFER_NO_MORPH=y
+CONFIG_ZMK_BEHAVIOR_HOLD_TAP_KEYBOARD_EAGER_KEY_DECISION=y
+
 # Uncomment the following lines to enable the Corne RGB Underglow
 # CONFIG_ZMK_RGB_UNDERGLOW=n
 # CONFIG_WS2812_STRIP=n
