--- a/config/corne.conf
+++ b/config/corne.conf
@@ -9,8 +9,10 @@ CONFIG_ZMK_SPLIT_BLE=y
 CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
 
 # Battery monitoring for both halves
-CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_POLLING=y
-CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_POLLING_INTERVAL_MS=60000
+CONFIG_ZMK_SPLIT_BLE_CENTRAL_PERIPHERALS=y
+CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_FETCHING=y
+# CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_POLLING=y
+# CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_POLLING_INTERVAL_MS=60000
 
 # Enable sleep mode for better battery life
 CONFIG_ZMK_SLEEP=y
@@ -27,11 +29,12 @@ CONFIG_ZMK_DISPLAY_WORK_QUEUE_DEDICATED=y
 CONFIG_ZMK_DISPLAY_STATUS_SCREEN_BUILT_IN=y
 
 # Layer status display
-CONFIG_ZMK_DISPLAY_LAYER_STATUS=y
+CONFIG_ZMK_WIDGET_LAYER_STATUS=y
+# CONFIG_ZMK_DISPLAY_LAYER_STATUS=y
 
 # Home Row Mods Configuration
-CONFIG_ZMK_BEHAVIOR_MOD_TAP_PREFER_NO_MORPH=y
-CONFIG_ZMK_BEHAVIOR_HOLD_TAP_KEYBOARD_EAGER_KEY_DECISION=y
+# CONFIG_ZMK_BEHAVIOR_MOD_TAP_PREFER_NO_MORPH=y
+# CONFIG_ZMK_BEHAVIOR_HOLD_TAP_KEYBOARD_EAGER_KEY_DECISION=y
 
 # Uncomment the following lines to enable the Corne RGB Underglow
 # CONFIG_ZMK_RGB_UNDERGLOW=n
