--- a/config/corne.conf
+++ b/config/corne.conf
@@ -1,42 +1,42 @@
-# Enable Wireless (Bluetooth LE)
-CONFIG_ZMK_BLE=y
+# --- ZMK configuration for Corne ---
 
-# Enable Split Keyboard Support
+# Bluetooth core
+CONFIG_ZMK_BLE=y
+CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
+CONFIG_BT_CTLR_TX_PWR_MIN=-8
+CONFIG_BT_PRIVACY=y
+CONFIG_BT_SETTINGS=y
+CONFIG_BT_SMP=y
+CONFIG_BT_SMP_SC=y
+
+# Split keyboard transport / role
 CONFIG_ZMK_SPLIT=y
 CONFIG_ZMK_SPLIT_BLE=y
-
-# Bluetooth settings
-CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
-
-# Battery monitoring for both halves
+# Optional split central/peripheral specifics
 CONFIG_ZMK_SPLIT_BLE_CENTRAL_PERIPHERALS=1
 CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_FETCHING=y
-# CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_POLLING=y
-# CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_POLLING_INTERVAL_MS=60000
 
-# Enable sleep mode for better battery life
-CONFIG_ZMK_SLEEP=y
-
-# USB settings (for central half connection to computer)
+# USB
 CONFIG_ZMK_USB=y
+CONFIG_ZMK_KEEP_USB_ENABLED=n
 
-# OLED Display Configuration
+# Power management / battery
+CONFIG_ZMK_SLEEP=y
+CONFIG_ZMK_BATTERY=y
+CONFIG_ADC=y
+CONFIG_ZMK_BATTERY_REPORT=y
+CONFIG_ZMK_BATTERY_POLL_INTERVAL_MS=60000
+
+# Display / OLED
 CONFIG_ZMK_DISPLAY=y
-CONFIG_I2C=y
-
-# OLED Animation Settings
+CONFIG_I2C=n
+CONFIG_SPI=y
 CONFIG_ZMK_DISPLAY_WORK_QUEUE_DEDICATED=y
 CONFIG_ZMK_DISPLAY_STATUS_SCREEN_BUILT_IN=y
-
-# Layer status display
 CONFIG_ZMK_WIDGET_LAYER_STATUS=y
 # CONFIG_ZMK_DISPLAY_LAYER_STATUS=y
 
-# Home Row Mods Configuration
-# CONFIG_ZMK_BEHAVIOR_MOD_TAP_PREFER_NO_MORPH=y
-# CONFIG_ZMK_BEHAVIOR_HOLD_TAP_KEYBOARD_EAGER_KEY_DECISION=y
-
-# Uncomment the following lines to enable the Corne RGB Underglow
-# CONFIG_ZMK_RGB_UNDERGLOW=n
-# CONFIG_WS2812_STRIP=n
-
+# Combos & Macros
+CONFIG_ZMK_COMBO=y
+CONFIG_ZMK_COMBO_STATE_TRACKING=y
+CONFIG_ZMK_BEHAVIOR_MACRO=y
