--- a/config/corne.conf
+++ b/config/corne.conf
@@ -3,11 +3,11 @@
 # Bluetooth core
 CONFIG_ZMK_BLE=y
 CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
-CONFIG_BT_CTLR_TX_PWR_MIN=-8
+# CONFIG_BT_CTLR_TX_PWR_MIN=-8
 CONFIG_BT_PRIVACY=y
 CONFIG_BT_SETTINGS=y
 CONFIG_BT_SMP=y
-CONFIG_BT_SMP_SC=y
+# CONFIG_BT_SMP_SC=y
 
 # Split keyboard transport / role
 CONFIG_ZMK_SPLIT=y
@@ -18,18 +18,19 @@ CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_FETCHING=y
 
 # USB
 CONFIG_ZMK_USB=y
-CONFIG_ZMK_KEEP_USB_ENABLED=n
+# CONFIG_ZMK_KEEP_USB_ENABLED=n
 
 # Power management / battery
 CONFIG_ZMK_SLEEP=y
 CONFIG_ZMK_BATTERY=y
 CONFIG_ADC=y
-CONFIG_ZMK_BATTERY_REPORT=y
-CONFIG_ZMK_BATTERY_POLL_INTERVAL_MS=60000
+# CONFIG_ZMK_BATTERY_REPORT=y
+# CONFIG_ZMK_BATTERY_POLL_INTERVAL_MS=60000
 
 # Display / OLED
 CONFIG_ZMK_DISPLAY=y
-CONFIG_I2C=n
+# Leave I2C unset so board/driver Kconfigs can decide (some boards force I2C=y)
+# CONFIG_I2C=n
 CONFIG_SPI=y
 CONFIG_ZMK_DISPLAY_WORK_QUEUE_DEDICATED=y
 CONFIG_ZMK_DISPLAY_STATUS_SCREEN_BUILT_IN=y
@@ -37,5 +38,5 @@ CONFIG_ZMK_WIDGET_LAYER_STATUS=y
 # CONFIG_ZMK_DISPLAY_LAYER_STATUS=y
 
 # Combos & Macros
-CONFIG_ZMK_COMBO=y
-CONFIG_ZMK_COMBO_STATE_TRACKING=y
+# CONFIG_ZMK_COMBO=y
+# CONFIG_ZMK_COMBO_STATE_TRACKING=y
