[fix] enable CONFIG_ZMK_SPLIT_ROLE_CENTRAL in configuration

--- a/config/corne.conf
+++ b/config/corne.conf
@@ -15,6 +15,7 @@ CONFIG_ZMK_SPLIT_BLE=y
 # Optional split central/peripheral specifics
 CONFIG_ZMK_SPLIT_BLE_CENTRAL_PERIPHERALS=1
 CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_FETCHING=y
+CONFIG_ZMK_SPLIT_ROLE_CENTRAL=y
 
 # USB
 CONFIG_ZMK_USB=y
