[fix] disable CONFIG_BT_PRIVACY to avoid Kconfig selection conflicts

--- a/config/corne.conf
+++ b/config/corne.conf
@@ -4,7 +4,8 @@
 CONFIG_ZMK_BLE=y
 CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
 # CONFIG_BT_CTLR_TX_PWR_MIN=-8
-CONFIG_BT_PRIVACY=y
+# Disable BT_PRIVACY to avoid Kconfig selection conflicts
+# CONFIG_BT_PRIVACY=y
 CONFIG_BT_SETTINGS=y
 CONFIG_BT_SMP=y
 # CONFIG_BT_SMP_SC=y
