--- a/config/corne.conf
+++ b/config/corne.conf
@@ -20,10 +20,14 @@ CONFIG_ZMK_SPLIT_ROLE_CENTRAL=y
 
 # USB
 CONFIG_ZMK_USB=y
-# CONFIG_ZMK_KEEP_USB_ENABLED=n
+# Turn on logging, and set ZMK logging to debug output
+# CONFIG_ZMK_USB_LOGGING=n
 
 # Power management / battery
 CONFIG_ZMK_SLEEP=y
+CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=3600000
+#1h
+
 CONFIG_ZMK_BATTERY=y
 CONFIG_ADC=y
 # CONFIG_ZMK_BATTERY_REPORT=y
