--- a/build.yaml
+++ b/build.yaml
@@ -26,3 +26,7 @@ include:
   - board: nice_nano_v2
     shield: corne_right nice_view_adapter nice_view_gem
     cmake-args: -DCONFIG_ZMK_SPLIT_ROLE_CENTRAL=n
+
+  - board: nice_nano_v2
+    shield: settings_reset
+    artifact-name: nano_reset_settings
