--- a/config/corne.conf
+++ b/config/corne.conf
@@ -1,5 +1,40 @@
-# Uncomment the following line to enable the Corne OLED Display
-CONFIG_ZMK_DISPLAY=y
+# Bluetooth core
+CONFIG_ZMK_BLE=y
+CONFIG_BT_CTLR_TX_PWR_PLUS_8=y  # Optional: Boosts signal strength
+# CONFIG_BT_CTLR_TX_PWR_MIN=-8
+# Disable BT_PRIVACY to avoid Kconfig selection conflicts
+# CONFIG_BT_PRIVACY=y
+CONFIG_BT_SETTINGS=y
+CONFIG_BT_SMP=y
+# CONFIG_BT_SMP_SC=y
 
+# Split keyboard transport / role
+CONFIG_ZMK_SPLIT=y
+CONFIG_ZMK_SPLIT_BLE=y
+# Optional split central/peripheral specifics
+CONFIG_ZMK_SPLIT_BLE_CENTRAL_PERIPHERALS=1
+CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_FETCHING=y
+CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_PROXY=y
+
+# USB
+CONFIG_ZMK_USB=y
+CONFIG_ZMK_USB_EXT_CHARGER=y
+# Turn on logging, and set ZMK logging to debug output
+# CONFIG_ZMK_USB_LOGGING=n
+
+# Power management / battery
+CONFIG_ZMK_SLEEP=y
+CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=3600000 #1h
+CONFIG_ZMK_BATTERY=y
+CONFIG_ADC=y
+# CONFIG_ZMK_BATTERY_REPORT=y
+# CONFIG_ZMK_BATTERY_POLL_INTERVAL_MS=60000
+
+# Display / OLED
+CONFIG_ZMK_DISPLAY=y
 CONFIG_ZMK_DISPLAY_STATUS_SCREEN_CUSTOM=y
-CONFIG_NICE_VIEW_GEM_ANIMATION=n
+CONFIG_NICE_VIEW_GEM_ANIMATION=y
+
+# Combos & Macros
+# CONFIG_ZMK_COMBO=y
+# CONFIG_ZMK_COMBO_STATE_TRACKING=y
