--- a/config/west.yml
+++ b/config/west.yml
@@ -4,6 +4,9 @@ manifest:
       url-base: https://github.com/zmkfirmware
     - name: m165437
       url-base: https://github.com/M165437
+    # - name: mario-peripheral-animation
+    #   url-base: https://github.com/...
+
     # Additional modules containing boards/shields/custom code can be listed here as well
     # See https://docs.zephyrproject.org/3.2.0/develop/west/manifest.html#projects
   projects:
@@ -14,5 +17,8 @@ manifest:
     - name: nice-view-gem
       remote: m165437
       revision: v0.3.0
+    # - name: mario-peripheral-animation
+    #   remote: gpeye
+    #   revision: main 
   self:
     path: config
