--- a/config/corne.conf
+++ b/config/corne.conf
@@ -31,8 +31,11 @@ CONFIG_ADC=y
 
 # Display / OLED
 CONFIG_ZMK_DISPLAY=y
+CONFIG_ZMK_DISPLAY_BLANK_ON_IDLE=n
 CONFIG_ZMK_DISPLAY_STATUS_SCREEN_CUSTOM=y
 CONFIG_NICE_VIEW_GEM_ANIMATION=y
+CONFIG_ZMK_DISPLAY_WORK_QUEUE_SYSTEM=y 
+#CONFIG_ZMK_DISPLAY_WORK_QUEUE_DEDICATED
 
 # Combos & Macros
 # CONFIG_ZMK_COMBO=y
