--- a/build.yaml
+++ b/build.yaml
@@ -19,12 +19,12 @@
 #
 ---
 include:
-  - board: nice_nano
+  - board: nice_nano_v2
     shield: corne_left nice_view_adapter nice_view_gem
     snippet: studio-rpc-usb-uart
     cmake-args: -DCONFIG_ZMK_SPLIT_ROLE_CENTRAL=y -DCONFIG_ZMK_STUDIO=y -DCONFIG_ZMK_STUDIO_LOCKING=n
 
-  - board: nice_nano
+  - board: nice_nano_v2
     shield: corne_right nice_view_adapter nice_view_gem
     cmake-args: -DCONFIG_ZMK_SPLIT_ROLE_CENTRAL=n
 
