--- a/config/west.yml
+++ b/config/west.yml
@@ -12,11 +12,11 @@ manifest:
   projects:
     - name: zmk
       remote: zmkfirmware
-      revision: main
+      revision: v0.3
       import: app/west.yml
     - name: nice-view-gem
       remote: m165437
-      revision: main
+      revision: v0.3.0
     # - name: mario-peripheral-animation
     #   remote: gpeye
     #   revision: main 
