--- a/config/corne.conf
+++ b/config/corne.conf
@@ -33,7 +33,7 @@ CONFIG_ADC=y
 CONFIG_ZMK_DISPLAY=y
 CONFIG_ZMK_DISPLAY_STATUS_SCREEN_CUSTOM=y
 CONFIG_NICE_VIEW_GEM_ANIMATION=n
-; CONFIG_ZMK_DISPLAY_WORK_QUEUE_DEDICATED=y
+#CONFIG_ZMK_DISPLAY_WORK_QUEUE_DEDICATED=y
 
 # Combos & Macros
 # CONFIG_ZMK_COMBO=y
